--- a/style.css
+++ b/style.css
@@ -1,29 +1,36 @@
 *, *:after, *:before{
     box-sizing: border-box;
     margin: 0;
+    padding:0;
+
 }
 
-body{
-    margin:0;
+html{
+    font-size: 16px;
+    transition: all .5s linear;
 }
+
 
 /* Header */
 .header{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    position: absolute;
+    position: fixed;
     top:0;
     left: 0;
     width: 100%;
-    margin-top:20px;
+    height: 80px;
     z-index:10;
+    background: #fff;
 
 }
 
 .logo{
     font-size: 30px;
     font-weight: 700;
+    text-decoration: none;
+    color:#000;
 }
 
 .nav{
@@ -35,9 +42,10 @@ body{
 .nav_link{
 
     margin: 0 20px;
-    color: beige;
+    color: #000;
     text-decoration: none;
-    transition: color .3s linear;
+    letter-spacing: .5px;
+    transition: color .1s linear;
 }
 
 .nav_link:hover{
@@ -63,9 +71,8 @@ body{
 
 .container{
     width: 100%;
-    max-width: 1200px;
     margin: 0 auto;
-
+    position: relative;
 }
 
 .homepage{
@@ -80,28 +87,190 @@ body{
 
 .homepage_inner{
     width: 100%;
-    max-width: 600px;
+    max-width: 800px;
     margin: 0 auto;
 }
 
 .hmpg_title{
     color:beige;
-    font-weight: 700;
-    font-size: 50px;
+    font-weight: 600;
+    font-size: 70px;
     text-align: center;
+
+
 
 }
 
 .hmpg_p{
-    font-size: 16px;
+    font-size: 18px;
     text-align: center;
     padding: 0 30px;
+    font-family: 'Montserrat', sans-serif;
 }
+
+/* First page after hmpg*/
+
+.imgright{
+    width:70%;
+    display: block;
+    right:0;
+    margin-left: auto;
+}
+
+
+
+.section{
+    margin: 60px 0;
+}
+
+.menu{
+    position: absolute;
+    left:30%;
+    transform: translate(-50%,0);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 85%;
+    justify-content: space-around;
+    position: absolute;
+    bottom: 0;
+}
+
+.spisok_link{
+    text-decoration: none;
+    font-weight: 400;
+    letter-spacing: .5px;
+    font-family: 'Montserrat', sans-serif;
+    color: #000;
+    opacity: 0.7;
+    text-transform: uppercase;
+
+}
+
+
+
+.spisok_link:after{
+    content:"";
+    display: block;
+    height: 1px;
+    width: 100%;
+    background-color: #000;
+    opacity:0;
+    transition: opacity .2s linear;
+}
+
+.spisok_link:hover{
+    opacity: 1;
+}
+.spisok_link:hover:after{
+    opacity:1;
+}
+
+@media (max-width: 800px) {
+    html{
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 600px) {
+    html{
+        font-size: 12px;
+    }
+}
+
+/*Most popular products*/
+
+.goshop{
+    margin: 0 auto;
+    text-align: center;
+
+}
+
+.btn{
+    margin-top: 10px;
+    height: auto;
+    width: auto;
+    background-color: transparent;
+    cursor: pointer;
+    border: solid 1px black;
+    text-transform: uppercase;
+    padding: 5px 10px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    transition: all .2s ease-in;
+}
+
+h4{
+    padding:0 0 40px;
+    text-transform: uppercase;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 100;
+    font-size: 24px;
+}
+
+.btn:hover{
+    background-color: #000;
+    color:#fff;
+}
+
+.section_inner{
+    display: flex;
+    justify-content: space-around;
+    margin: 60px 0;
+    flex: 1 1 0;
+}
+
+.img{
+    width: 30%;
+}
+
+/*Join Us*/
+
+.joinusbkg{
+    background: url("https://bureau.ru/var/files/img1532613761") center no-repeat;
+    background-size: cover;
+    height:100vh;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.joinus{
+    background: #fff;
+    margin:0 auto;
+    text-align: center;
+    z-index:2;
+    position: absolute;
+    padding:50px 40px;
+}
+
+.input{
+    width:100%;
+    margin-bottom: 10px;
+    height: 2rem;
+    padding:2px 2px;
+    font-family: monospace;
+}
+
+.btn_sub{
+    width: 100%;
+    height:2rem;
+    margin-top:0;
+}
+
+.p_join{
+    padding-bottom: 40px;
+    opacity: .7;
+    font-family:monospace;
+    font-size: 0.8rem;
+}
+
 
 /*Footer*/
 
 .footer_inner{
-    background-color: #f5f5f5;
+    background-color: #ddd;
     display: flex;
 
 }
@@ -110,6 +279,8 @@ body{
     margin-left: 30px;
     margin-top: 20px;
     min-width: 200px;
+    width: 30%;
+    transition: ease all 1s;
 }
 
 .spisok{
@@ -117,13 +288,10 @@ body{
     list-style-type: none;
 }
 
-.el_spiska{;
-    font-weight: lighter;
+.el_spiska{
     padding: 2px 0 2px 3px;
-    letter-spacing: .5px;
-    font-family: 'Montserrat', sans-serif;
     margin-bottom: 10px;
-    color: #999;
+
 }
 
 .footer_zag{
@@ -133,3 +301,21 @@ body{
     font-family: 'Montserrat', sans-serif;
 }
 
+.footer_link{
+    text-decoration: none;
+    font-weight: lighter;
+    letter-spacing: .5px;
+    font-family: 'Montserrat', sans-serif;
+    color: #999;
+    transition: opacity .2s linear;
+}
+
+.footer_link:hover{
+    opacity: .5;
+}
+
+@media (max-width: 640px){
+    .footer_sec{
+        width: 50%;
+    }
+}
